[project]
name = "kinderbetreuung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geojson>=3.3.0",
    "geopandas>=1.1.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
]
